<resources>
    <string name="app_name">CRUD SQlite</string>
    <string name="action_settings">Settings</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_documento">Documento</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_correo">Correo</string>
    <string name="hint_edad">Edad</string>

    <string name="hint_name_card">Carro</string>
    <string name="hint_value_car">Valor</string>
    <string name="hint_placa_car">Placa</string>
    <string name="hint_modelo_car">Modelo</string>
    <string name="hint_color_car">Color</string>
    <string name="hint_tipo_car">Tipo de carro</string>
    <string name="hint_url_car">Imagen</string>
    <string name="hint_document_owner">Propietario</string>
    <string name="hint_vendedor">Vendedor</string>

    <string name="accion_cancelar">Cancelar</string>
    <string name="accion_aceptar">Aceptar</string>

    <string name="title_activity_crear_persona">Crear Persona</string>
    <string name="title_activity_crear_carro">Crear Carro</string>
</resources>
