<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="@color/grey"
tools:context=".Views.Activities.Activities.CrearVendedor">
<LinearLayout
    android:id="@+id/area_nombreVendedor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/user"/>


    <EditText
        android:id="@+id/campo_nombre_vendedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="text"
        android:singleLine="true"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>

<LinearLayout
    android:id="@+id/area_documento"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/area_nombreVendedor"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_documento"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:src="@drawable/tarjeta_de_identificacion"
       />


    <EditText
        android:id="@+id/campo_documento_vendedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_documento"
        android:inputType="text"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>

<LinearLayout
    android:id="@+id/area_oficina"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/area_documento"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_oficina"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/office" />


    <EditText
        android:id="@+id/campo_oficina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Oficina"
        android:inputType="text"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>

<LinearLayout
    android:id="@+id/area_telefono"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/area_oficina"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/telephone" />


    <EditText
        android:id="@+id/campo_telefono_vendedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_telefono"
        android:inputType="text"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>


<!-- Bottom Bar -->
<LinearLayout
    android:id="@+id/bottom_bar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_alignParentBottom="true"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <Button
        android:id="@+id/boton_cancelar"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/accion_cancelar" />

    <Button
        android:id="@+id/boton_aceptar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/accion_aceptar"
        android:textColor="@android:color/white" />
</LinearLayout>
</RelativeLayout>